--- a/lvm_flask/templates/htmlModel/base.html
+++ b/lvm_flask/templates/htmlModel/base.html
@@ -8,8 +8,8 @@
   {% block title %}<title>网页管理LVM</title>{% endblock %}
 
   {% block styles %}
-  <link rel="stylesheet" href="./static/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./static/myCSS.css">
+  <link rel="stylesheet" href="{{url_for('static',filename='css/bootstrap.min.css')}}">
+  <link rel="stylesheet" href="{{url_for('static',filename='myCSS.css')}}">
   {% endblock %}
 </head>
 
@@ -38,8 +38,8 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{url_for('lvm./')}}">总览</a>
-			  <a class="dropdown-item" href="#">LVM安装</a>
-			  <a class="dropdown-item" href="#">功能详情页</a>
+			  <a class="dropdown-item" href="{{url_for('lvm.lvmInstall')}}">LVM安装</a>
+			  <a class="dropdown-item" href="{{url_for('lvm.lvmShow')}}">功能详情页</a>
 				<hr>
 			  <a class="dropdown-item" href="#">帮助</a>
             </div>
@@ -64,7 +64,7 @@
 
 {% block scripts %}
   <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
-  <script src="./static/js/bootstrap.min.js"></script>
+  <script src="../static/js/bootstrap.min.js"></script>
 {% endblock %}
 
 </body>
